--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="container">
-            <img src="capivara.jpg" width="200" height="200" alt="capivara">
             <h1>Meu Projeto CSS e JS</h1>
+            <img src="capivara.jpg" width="200" height="200" alt="capivara"><br>
             <button id="messageButton">Clique aqui</button>
             <p id="message" class="hidden">Olá, esta é uma mensagem exibida com
         Javascript</p>
